# practical-5-COS214

./: Button.cpp  Button.h  CMakeLists.txt  Command.h  Event.h  LegacyThermostat.cpp  LegacyThermostat.h  LightSensor.cpp  LightSensor.h  LockDoorsCommand.cpp  LockDoorsCommand.h  MacroCommand.cpp  MacroCommand.h  Sensor.h  SetLightIntensityCommand.h  SetTemperatureCommand.h  SmartDevice.h  SmartDoor.cpp  SmartDoor.h  SmartHomeApplication.cpp  SmartHomeApplication.h  SmartLight.h  SmartRoom.cpp  SmartThermostat.cpp  SmartThermostat.h  SmartThermostatIntegrator.h  TemperatureSensor.cpp  TemperatureSensor.h  TurnOffLightsCommand.cpp  TurnOffLightsCommand.h  TurnOnLightsCommand.h  UnlockDoorsCommand.h  main.cpp
FitchFork/: Readme
Tests/: CMakeLists.txt
Tests/src/: DeviceType.h  LegacyThermostat.h  Makefile  SetLightIntensityCommand.cpp  SetLightIntensityCommand.h  SetTemperatureCommand.cpp  SetTemperatureCommand.h  SmartHomeApplication.cpp  SmartHomeApplication.h  SmartLight.cpp  SmartLight.h  SmartRoom.cpp  SmartRoom.h  SmartThermostatIntegrator.cpp  TurnOnLightsCommand.cpp  UnlockDoorsCommand.cpp
Tests/tests/: light_test.cpp  smart_home_application_test.cpp  smart_room_test.cpp  smart_thermostat_integrator_test.cpp  smart_thermostat_test.cpp
UMLs/: ActivityDiagram_P5.vpp  ClassDiagram_P5.vpp
html/: Button_8h_source.html  Command_8h_source.html  DeviceType_8h_source.html  Event_8h_source.html  LegacyThermostat_8h_source.html  LightSensor_8h_source.html  LockDoorsCommand_8h_source.html  MacroCommand_8h_source.html  Sensor_8h_source.html  SetLightIntensityCommand_8h_source.html  SetTemperatureCommand_8h_source.html  SmartDevice_8h_source.html  SmartDoor_8h_source.html  SmartHomeApplication_8h_source.html  SmartLight_8h_source.html  SmartRoom_8h_source.html  SmartThermostatIntegrator_8h_source.html  SmartThermostat_8h_source.html  TemperatureSensor_8h_source.html  TurnOffLightsCommand_8h_source.html  TurnOnLightsCommand_8h_source.html  UnlockDoorsCommand_8h_source.html  annotated.html  classButton-members.html  (+96 more)
(+78 files in other folders)
